--- a/app/globals.css
+++ b/app/globals.css
@@ -21,6 +21,26 @@
   font-display: swap;
 }
 
+.custom-scroll::-webkit-scrollbar {
+  width: 8px;
+}
+
+.custom-scroll {
+  padding-right: 5px;
+  scrollbar-gutter: stable;
+}
+
+.custom-scroll::-webkit-scrollbar-track {
+  background: transparent;
+  margin-left: auto;
+}
+
+.custom-scroll::-webkit-scrollbar-thumb {
+  background-color: #ff7000;
+  border-radius: 4px;
+  margin-left: auto;
+}
+
 :root {
   --bg-light: #ffffff;
   --bg-dark: #000000;
@@ -102,7 +122,7 @@
   }
 
   .dark .bg-primary {
-    background-color: var(--primary-dark);
+    background-color: var(--accent);
   }
 
   .dark .bg-secondary {
