Implement SignIn & SignOut Forms

--- a/app/globals.css
+++ b/app/globals.css
@@ -48,7 +48,7 @@
   --primary-dark: #0f1117;
   --primary-light: #e9e9e9;
   --accent: #ff7000;
-  --secondary-dark: #1a1a1a;
+  --secondary-dark: #212734;
   --secondary-light: #aaaaaa;
   --font-roboto: "Roboto", sans-serif;
 }
